   on whether it is going to be processed by the interpreter or by the C
   compiler.
      (defun example ()
        (ext:with-backend
          :bytecodes (print 3)
          :c/c++ (print 2)))
   The two currently available backends are :bytecodes and :c/c++.

 - Added accurate type proclamations for all functions in the ANSI CL
   specification.


ECL 10.4.1:
===========

* Bugs fixed:

 - Fixed offset problems in READ/WRITE-SEQUENCE.

 - In multithreaded ECL, the signal servicing thread was not created due to
   a stale debug statement.

 - The tool 'ecl-config' contained unsubstituted values, such as @LDRPATH@
   because these variablesls had been renamed in the autoconf file.

 - The reimplementation of DIRECTORY introduced a bug in pathnames with ending
   double wildcars, such as "/foo/**/".

 - EXT:SAFE-EVAL (or cl_safe_eval in C) would attempt to start the debugger
   when an error was signaled.

 - The logical hostname EXT: did not have a pathname translation relative to
   that of SRC:

 - After loading the compiler, the COMMON-LISP package was left unlocked
   against changes.

 - ECL can build again itself using a C++ compiler (--with-cxx thus works).

 - ecl_make_file_stream_from_fd() did not set the right mode in the stream
   structure.

 - ECL did not understand type declarations that involved symbol macros.

 - (SETF STREAM-EXTERNAL-FORMAT) inserted the wrong format type in some cases.

* Visible changes:

 - The source location annotator records the original pathnames instead of
   truenames. This allows Slime to find out the ECL sources even if they
   have been moved.

 - The signal servicing thread now carries the name SI:SIGNAL-SERVICING, which
   is different from the name of the threads that are created to actually
   handle those signals. Users should avoid killing SI:SIGNAL-SERVICING.

 - FFI:CLINES admits the notation @lisp-object, just like FFI:C-INLINE. The
   result is that @lisp-object gets replaced with a pointer to the given