@@ -37,10 +37,10 @@
   "src:cmp;cmpclos.lsp"
   "src:cmp;cmpstructures.lsp"
   "src:cmp;cmparray.lsp"
-  "src:cmp;cmpmain.lsp"))
+  "src:cmp;cmpmain.lsp"
+  "src:cmp;sysfun.lsp"
+  "src:cmp;proclamations.lsp"))
 
 (let ((si::*keep-documentation* nil))
-  (mapc #'(lambda (x) (load x :verbose nil)) +cmp-module-files+)
-  (load "src:cmp;sysfun" :verbose nil)
-  (load "src:cmp;proclamations" :verbose nil))
+  (mapc #'(lambda (x) (load x :verbose nil)) +cmp-module-files+))
 
