@@ -38,6 +38,9 @@ ECL 10.4.2:
  - Added accurate type proclamations for all functions in the ANSI CL
    specification.
 
+ - The compiler is now shipped as a single FASL file, cmp.fas, without
+   extra files such as sysfun.lsp
+
 
 ECL 10.4.1:
 ===========
